syntax = "proto3";

package hello;

option java_multiple_files = true;
option java_outer_classname = "HelloApiProto";
option java_package = "dev.rocky.protobuf.hello";

// Hello API.
service HelloAPI {
    rpc Hello (HelloRequest) returns (HelloResponse);
}

message HelloRequest {
    string name = 1;
}

message HelloResponse {
    string message = 1;
}
